[gd_scene load_steps=2 format=3 uid="uid://di0w83bg58gna"]

[ext_resource type="Script" path="res://Content/Scripts/Interaction/interaction_area.gd" id="1_q5f76"]

[node name="InteractionArea" type="Area2D"]
collision_layer = 0
collision_mask = 2
script = ExtResource("1_q5f76")

[node name="PreviewText" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -72.5
offset_top = -11.5
offset_right = 72.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "[SPACE] to Interact"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
